fixed navbar, split up desc onto multiple lines

--- a/themes/creative/layouts/partials/nav.html
+++ b/themes/creative/layouts/partials/nav.html
@@ -18,13 +18,13 @@
                     <a class="page-scroll" href="#about">{{ with .Site.Params.navigation.links.about }}{{ . }}{{ end }}</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#services">{{ with .Site.Params.navigation.links.services }}{{ . }}{{ end }}</a>
+                    <a class="page-scroll" href="#details">{{ with .Site.Params.navigation.links.details }}{{ . }}{{ end }}</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">{{ with .Site.Params.navigation.links.portfolio }}{{ . }}{{ end }}</a>
+                    <a class="page-scroll" href="#attractions">{{ with .Site.Params.navigation.links.attractions }}{{ . }}{{ end }}</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#contact">{{ with .Site.Params.navigation.links.contact }}{{ . }}{{ end }}</a>
+                    <a class="page-scroll" href="#rsvp">{{ with .Site.Params.navigation.links.rsvp }}{{ . }}{{ end }}</a>
                 </li>
             </ul>
         </div>
