--- a/themes/creative/layouts/partials/attractions.html
+++ b/themes/creative/layouts/partials/attractions.html
@@ -1,5 +1,5 @@
 {{ "<!-- SERVICES -->" | safeHTML }}
-<section id="services">
+<section id="attractions">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
