--- a/themes/creative/layouts/partials/about.html
+++ b/themes/creative/layouts/partials/about.html
@@ -5,7 +5,16 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">{{ with .Site.Params.about.headline }}{{ . }}{{ end }}</h2>
                 <hr class="light">
-                <p class="text-faded">{{ with .Site.Params.about.description }}{{ . | markdownify }}{{ end }}</p>
+                <div class="row">
+                  <div class="col-xs-12 text-center"> <!-- column 1 -->
+                    <p class="text-faded">{{ with .Site.Params.about.description1 }}{{ . | markdownify }} {{ end }}{{ with .Site.Params.about.description2 }}{{ . | markdownify }}{{ end }}</p>
+                  </div>
+                  <!-- use below for two column
+                  <div class="col-xs-6">
+                    <p class="text-faded">{{ with .Site.Params.about.description2 }}{{ . | markdownify }}{{ end }}</p>
+                  </div>
+                </div>
+                -->
                 <!-- <a href="#" class="btn btn-default btn-xl">{{ with .Site.Params.about.buttonText }}{{ . }}{{ end }}</a> -->
             </div>
         </div>
