--- a/themes/creative/layouts/partials/aside.html
+++ b/themes/creative/layouts/partials/aside.html
@@ -2,24 +2,24 @@
 <section class="bg-light" id="rsvp">
   <div class="container">
     <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 text-center">
+        <div class="col-xs-8 col-xs-offset-2 text-center">
             <h2 class="section-heading">{{ with .Site.Params.aside.headline }}{{ . }}{{ end }}</h2>
             <hr class="primary">
         </div>
-
-
+    </div>
+    <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
         <form class="form-horizontal" role="form"   action="https://docs.google.com/forms/d/1ri03adkTpwSjUXSc_ZD_stNF54-wZc3kWGMToypZq0o/formResponse" target="_self" method="POST" id="mG61Hd" onsubmit="">
 
           <div class="form-group">
-            <label for="inputName" class="col-lg-2 control-label">Name *</label>
+            <label for="inputName" class="col-lg-2 control-label">Name</label>
             <div class="col-lg-10">
               <input type="text" class="form-control" id="inputName" name="entry.751649853" placeholder="Your Name">
             </div>
           </div>
 
           <div class="form-group">
-            <label for="inputEmail" class="col-lg-2 control-label">Email *</label>
+            <label for="inputEmail" class="col-lg-2 control-label">Email</label>
             <div class="col-lg-10">
               <input type="email" class="form-control" id="inputEmail" name="entry.1837984145" placeholder="Your Email">
             </div>
@@ -48,14 +48,14 @@
             </div>
           </div>
 
-
+          <!-- First guest's responses -->
+          <br></br>
           <div class="form-group">
             <label for="firstGuestName" class="col-lg-2 control-label">First guest</label>
             <div class="col-lg-10">
               <input type="text" class="form-control" id="firstGuestName" name="entry.780597460" placeholder="First guest's name">
             </div>
           </div>
-
 
           <div class="form-group" name="entry.1680750664">
             <label for="meal1" class="col-lg-2 control-label">First guest's meal choice</label>
@@ -78,6 +78,8 @@
           </div>
 
 
+          <!-- Second guest's responses -->
+          <br></br>
           <div class="form-group">
             <label for="secondGuestName" class="col-lg-2 control-label">Second guest</label>
             <div class="col-lg-10">
@@ -105,6 +107,8 @@
             </div>
           </div>
 
+          <!-- Additional guests responses -->
+          <br></br>
           <div class="form-group">
             <label for="message" class="col-lg-2 control-label">Additional guests</label>
             <div class="col-lg-10">
@@ -112,10 +116,11 @@
             </div>
           </div>
 
-          <div class="g-recaptcha col-lg-offset-4 col-lg-10" data-sitekey="6Lc_oxoTAAAAALavHALxheVfAkwMExWoufA4GG5N" data-callback="enableBtn"></div>
+          <div class="g-recaptcha col-xs-10 col-xs-offset-3 col-lg-10 col-lg-offset-3" data-sitekey="6Lc_oxoTAAAAALavHALxheVfAkwMExWoufA4GG5N" data-callback="enableBtn"></div>
+          <br></br>
+          <br></br>
           <div class="form-group">
-            <p></p>
-            <div class="col-lg-offset-2 col-lg-10">
+            <div class="col-xs-8 col-xs-offset-2">
               <button type="submit" class="btn btn-primary btn-lg btn-success" value="Send" id="submit" onclick="" disabled="disabled">RSVP</button>
             </div>
           </div>
