--- a/themes/creative/layouts/partials/modals.html
+++ b/themes/creative/layouts/partials/modals.html
@@ -10,7 +10,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 col-sm-2">
+                <div class="col-lg-12">
                     <div class="modal-body">
                         <h2>{{ .title }}</h2>
                         <hr class="star-primary">
