--- a/themes/creative/static/css/creative.css
+++ b/themes/creative/static/css/creative.css
@@ -211,6 +211,7 @@ header .header-content .header-content-inner h1 {
     margin-bottom: 0;
     text-transform: uppercase;
     font-weight: 700;
+    color: rgba(255,255,255,1);
 }
 
 header .header-content .header-content-inner hr {
@@ -219,9 +220,9 @@ header .header-content .header-content-inner hr {
 
 header .header-content .header-content-inner p {
     margin-bottom: 50px;
-    font-size: 16px;
-    font-weight: 300;
-    color: rgba(255,255,255,.7);
+    font-size: 20px;
+    font-weight: 500;
+    color: rgba(255,255,255,1);
 }
 
 @media(min-width:768px) {
@@ -497,30 +498,16 @@ body {
     webkit-tap-highlight-color: #222;
 }
 
-
-#contactform .btn:hover {
-  background: rgba(9,8,77,0.7);
-}
+/* all map containers must be full height */
 
 #map-canvas {
-  width: 100%;
-  height: 300px;
-  margin-bottom: 15px;
-  border: 2px solid #fff;
+	width:100%;
+  height:300px;
 }
 
-/* @group google map */
-.googlemap {
-  position: relative;
-  padding-bottom: 50%;
-  height: 0;
-  overflow: hidden;
-}
-.googlemap iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100% !important;
-  height: 100% !important;
-}
-/* @end */
+#map-outer {  height: 440px;
+    padding: 20px;
+    border: 2px solid #CCC;
+    margin-bottom: 20px;
+    background-color:#FFF }
+#map-container { height: 400px }
