--- a/themes/creative/layouts/partials/attractions.html
+++ b/themes/creative/layouts/partials/attractions.html
@@ -1,4 +1,4 @@
-{{ "<!-- SERVICES -->" | safeHTML }}
+{{ "<!-- ATTRACTIONS -->" | safeHTML }}
 <section id="attractions">
     <div class="container">
         <div class="row">
