added a trip page... still under construction

--- a/themes/creative/layouts/partials/attractions.html
+++ b/themes/creative/layouts/partials/attractions.html
@@ -4,6 +4,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">{{ with .Site.Params.services.headline }}{{ . }}{{ end }}</h2>
+                <a href="/trip">Click here for more detailed trip planning.</a><br>
                 <hr class="primary">
             </div>
         </div>
