--- a/themes/creative/layouts/partials/nav.html
+++ b/themes/creative/layouts/partials/nav.html
@@ -21,6 +21,9 @@
                     <a class="page-scroll" href="#details">{{ with .Site.Params.navigation.links.details }}{{ . }}{{ end }}</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="/trip">{{ with .Site.Params.navigation.links.trip }}{{ . }}{{ end }}</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#attractions">{{ with .Site.Params.navigation.links.attractions }}{{ . }}{{ end }}</a>
                 </li>
                 <li>
