--- a/themes/creative/layouts/post/single.html
+++ b/themes/creative/layouts/post/single.html
@@ -5,7 +5,7 @@
     </head>
     <body id="page-top">
 
-        {{ partial "nav.html" . }}
+        {{ partial "nav_trip.html" . }}
 
         {{ partial "content.html" . }}
 
