--- a/themes/creative/layouts/partials/aside.html
+++ b/themes/creative/layouts/partials/aside.html
@@ -25,7 +25,7 @@
             </div>
           </div>
 
-          <div class="form-group">
+          <div class="form-group" name="entry.2099858046">
             <label for="attendance" class="col-lg-2 control-label">How many will join us?</label>
             <div class="radio-inline">
               <label><input type="radio" name="entry.2099858046" value="0">0 - decline with regret</label>
